Blogpost revamp: remove phone jump and fix readingIndex

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -135,3 +135,12 @@ header.nostick {
 header.fixed {
     top: 0px;
 }
+
+header.sticking:not(.expanded) {
+    overflow: hidden;
+}
+#readingIndex {
+    font-weight: bold;
+    size: 1rem;
+    display: inline-block;
+}
